# tinygrad-ft

./: .gitignore  BUGS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
examples/: benchmark_finetune.py  load_qwen.py  overfit_demo.py
tests/: test_forward_qwen.py  test_lora.py  test_name_mapping.py  test_train.py
tinygrad_ft/: __init__.py  build.py  data.py  forward.py  hf_load.py  lora.py  tokenizer.py  train.py
